--- a/locales/en/conferences-et-expositions.json
+++ b/locales/en/conferences-et-expositions.json
@@ -1,7 +1,7 @@
 {
   "breadcrumb": {
     "events": "Events",
-    "conferences": "Conferences & Exhibitions"
+    "conferences": "Trade Shows & Expos"
   },
   
   "hero": {
