--- a/locales/en/ecoles-organismes-et-anniversaires.json
+++ b/locales/en/ecoles-organismes-et-anniversaires.json
@@ -1,7 +1,7 @@
 {
   "breadcrumb": {
     "events": "Events",
-    "schools": "Schools, Organizations & Birthdays"
+    "schools": "Schools, Community Fundraising Events"
   },
   
   "hero": {
