--- a/locales/en/events.json
+++ b/locales/en/events.json
@@ -22,7 +22,7 @@
       },
       {
         "id": "ouvertures-et-activations",
-        "title": "Openings & Activations",
+        "title": "New Branch Openings & Product Launches",
         "tagline": "Make your next event unforgettable - blend your brand with action!",
         "description": "Want to create buzz and draw a crowd? Our smoothie bike is more than just a fun activity - it's a magnet for your brand. Every element can be customized with your logo to leave a lasting impression.",
         "benefits": [
@@ -35,7 +35,7 @@
       },
       {
         "id": "ecoles-organismes-et-anniversaires",
-        "title": "Schools, Organizations & Birthdays", 
+        "title": "Schools, Community Fundraising Events",
         "tagline": "Bring people together around smoothies, smiles, and lots of fun!",
         "description": "Looking for a creative way to raise funds, connect with your community, or celebrate a special day? Our smoothie bike experiences are perfect for school events and birthday parties!",
         "benefits": [
@@ -48,7 +48,7 @@
       },
       {
         "id": "conferences-et-expositions",
-        "title": "Conferences & Exhibitions",
+        "title": "Trade Shows & Expos",
         "tagline": "Attract attention, spark conversations, and energize your booth!",
         "description": "Looking for a way to stand out at your next event? Our smoothie bike is an attraction that gets people pedaling, smiling, and engaging with your brand in a fun and memorable way.",
         "benefits": [
