--- a/locales/fr/conferences-et-expositions.json
+++ b/locales/fr/conferences-et-expositions.json
@@ -1,7 +1,7 @@
 {
   "breadcrumb": {
     "events": "Événements",
-    "conferences": "Conférences & Expositions"
+    "conferences": "Salons & Expositions"
   },
   
   "hero": {
