--- a/locales/fr/ecoles-organismes-et-anniversaires.json
+++ b/locales/fr/ecoles-organismes-et-anniversaires.json
@@ -1,7 +1,7 @@
 {
   "breadcrumb": {
     "events": "Événements",
-    "schools": "Écoles, Organismes & Anniversaires"
+    "schools": "Écoles & Collectes de fonds communautaires"
   },
   
   "hero": {
