--- a/locales/fr/events.json
+++ b/locales/fr/events.json
@@ -22,7 +22,7 @@
       },
       {
         "id": "ouvertures-et-activations",
-        "title": "Ouvertures & Activations",
+        "title": "Ouvertures de succursales & Lancements de produits",
         "tagline": "Rendez votre prochain événement inoubliable - mélangez votre marque à l'action!",
         "description": "Vous voulez créer un buzz et attirer une foule? Notre vélo à smoothie est plus qu'une simple activité amusante - c'est un aimant pour votre marque. Chaque élément peut être adapté avec votre logo pour laisser une impression durable.",
         "benefits": [
@@ -35,7 +35,7 @@
       },
       {
         "id": "ecoles-organismes-et-anniversaires",
-        "title": "Écoles, Organismes & Anniversaires", 
+        "title": "Écoles & Collectes de fonds communautaires",
         "tagline": "Rassemblez les gens autour de smoothies, de sourires et beaucoup de plaisir!",
         "description": "Vous cherchez une façon créative de collecter des fonds, de vous connecter avec votre communauté ou de célébrer un jour spécial? Nos expériences de vélos à smoothie sont parfaites pour les événements scolaires et les fêtes d'anniversaire!",
         "benefits": [
@@ -48,7 +48,7 @@
       },
       {
         "id": "conferences-et-expositions",
-        "title": "Conférences & Expositions",
+        "title": "Salons & Expositions",
         "tagline": "Attirez l'attention, suscitez des conversations et dynamisez votre stand!",
         "description": "Vous cherchez un moyen de vous démarquer lors de votre prochain événement? Notre vélo à smoothie est une attraction qui fait pédaler, sourire et engager les gens avec votre marque d'une manière amusante et mémorable.",
         "benefits": [
