--- a/locales/fr/ouvertures-et-activations.json
+++ b/locales/fr/ouvertures-et-activations.json
@@ -1,7 +1,7 @@
 {
   "breadcrumb": {
     "events": "Événements",
-    "openings": "Ouvertures & Activations"
+    "openings": "Ouvertures de succursales & Lancements de produits"
   },
   
   "hero": {
