--- a/locales/en/ouvertures-et-activations.json
+++ b/locales/en/ouvertures-et-activations.json
@@ -1,7 +1,7 @@
 {
   "breadcrumb": {
     "events": "Events",
-    "openings": "Openings & Activations"
+    "openings": "New Branch Openings & Product Launches"
   },
   
   "hero": {
