--- a/locales/en/ecoles-organismes-et-anniversaires.json
+++ b/locales/en/ecoles-organismes-et-anniversaires.json
@@ -1,21 +1,21 @@
 {
   "breadcrumb": {
     "events": "Events",
-    "schools": "Schools, Community Fundraising Events"
+    "category": "Schools, Community Fundraising & Birthdays"
   },
   
   "hero": {
-    "title": "Bring people together around smoothies, smiles, and lots of fun!",
-    "description": "Looking for a creative way to raise funds, connect with your community, or celebrate a special day? Our smoothie bike experiences are perfect for school events and birthday parties!",
-    "requestQuote": "Request an educational quote",
-    "viewPackage": "View children's package"
+    "title": "Bring people together around smoothies, smiles, and fun!",
+    "description": "Looking for a creative way to fundraise, connect with your community, or celebrate a special day? Our smoothie bike experiences are perfect for school events and birthday parties!",
+    "requestQuote": "Request educational quote",
+    "viewChildrenPackage": "View child package"
   },
   
   "stats": [
     { "number": "500+", "label": "Successful school events" },
-    { "number": "98%", "label": "Teacher satisfaction rate" },
-    { "number": "40%", "label": "Discount for schools" },
-    { "number": "15k+", "label": "Children educated" }
+    { "number": "98%", "label": "Teacher satisfaction" },
+    { "number": "40%", "label": "School discount rate" },
+    { "number": "15k+", "label": "Children engaged" }
   ],
   
   "educational": {
@@ -157,5 +157,30 @@
     "description": "Whether it's for education, celebration, or fundraising, we adapt our service to your specific needs and budget.",
     "quoteButton": "Request an educational quote",
     "discussButton": "Discuss my project"
+  },
+  
+  "benefitsSection": {
+    "title": "Why do our events work so well?",
+    "subtitle": "We offer discounted packages for schools and nonprofits, making this experience accessible to everyone.",
+    "items": [
+      { "title": "Educational and Fun Activity", "description": "Combine learning and fun by teaching nutrition, physical activity, and sustainability in an interactive way." },
+      { "title": "Effective Fundraising", "description": "Create a memorable event that attracts participants and generates significant revenue for your cause." },
+      { "title": "Community Engagement", "description": "Bring families, students, and community together around a positive activity that strengthens social bonds." },
+      { "title": "Unforgettable Memories", "description": "Create precious moments and memorable photos that participants will cherish for years." }
+    ]
+  },
+  
+  "education": {
+    "heading": "Bring learning to life",
+    "description": "Our workshops turn learning into an adventure! Children explore nutrition, the environment, and physical activity through an unforgettable interactive experience.",
+    "label": "Educational benefits:",
+    "items": [
+      "Learning about nutrition and healthy habits",
+      "Raising awareness of the environment and sustainability",
+      "Developing motor skills and coordination",
+      "Teamwork and cooperation",
+      "Self-confidence and personal achievement"
+    ],
+    "ctaButton": "Educational program"
   }
 }
